sort.pancake.BasicPancake.scala.code
def solve() {
  while(!estTriee()){
    retourne(1)
    retourne(2)
    reoturne(3)
  }
}